--- a/config/database.yml
+++ b/config/database.yml
@@ -14,10 +14,10 @@ default: &default
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password: csc4500
+  password: 
   host: localhost
 
-development: 
+development:
   <<: *default
   database: capstone
 
